--- a/index.html
+++ b/index.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Mi Portafolio Personal</title>
 </head>
 <body>
     <header>
-        <h1>Mi Portafolio</h1>
+        <h1>Jose Rodrigo Rios Arcienega</h1>
+        <p>Aprendiz de Programacion</p>
     </header>
-
     <nav>
         <ul>
-            <li><a href="#sobre-mi">Sobre mí</a></li>
+            <li><a href="#sobre-mi">Sobre Mí</a></li>
             <li><a href="#proyectos">Proyectos</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
-
+    
     <section id="sobre-mi">
-        <h2>Sobre mí</h2>
-        <p>Escribe una breve descripción sobre ti aquí.</p>
+        <h2>Sobre Mí</h2>
+        <p>¡Hola! Soy un apasionado desarrollador web con experiencia en tecnologías basicas front-end y back-end. Me encanta crear soluciones web efectivas y atractivas.</p>
+        <p>Actualmente me desenbuelvo con el desarrollo de Administracion de Sistemas y soporte Informatico.</p>
+        <p>¡Me gusta crear productos frontend sólidos y escalables con excelentes experiencias de usuario.</p>       
     </section>
-
     <section id="proyectos">
         <h2>Proyectos</h2>
         <div class="proyecto">
-            <h3>Proyecto 1</h3>
-            <p>Descripción del proyecto 1.</p>
+            <img src="proyecto1.jpg" alt="Proyecto 1">
+            <h3>HelloTax</h3>
+            <p>hola impuesto</p>
+            <p>aplicación.hellotax.com.</p>  
         </div>
         <div class="proyecto">
+            <img src="proyecto2.jpg" alt="Proyecto 2">
             <h3>Proyecto 2</h3>
             <p>Descripción del proyecto 2.</p>
         </div>
     </section>
-
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Contáctame en: tu@email.com</p>
+        <p>¡No dudes en contactarme! Estoy disponible a través de correo electrónico y redes sociales.</p>
+        <a href="mailto:joserodrigoriosa@gmail.com">Enviar Correo</a>
     </section>
-
     <footer>
-        <p>&copy; 2023 Tu Nombre</p>
+        <p>&copy; 2023 Mi Portafolio Personal</p>
     </footer>
 </body>
 </html>
