--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     
     <section id="sobre-mi">
         <h2>Sobre Mí</h2>
+        <img src="proyecto1.jpg" alt="Proyecto 1">
+            <h3>HelloTax</h3>
+            <p>hola impuesto</p>
+            <p>aplicación.hellotax.com</p> 
         <p>¡Hola! Soy un apasionado desarrollador web con experiencia en tecnologías basicas front-end y back-end. Me encanta crear soluciones web efectivas y atractivas.</p>
         <p>Actualmente me desenbuelvo con el desarrollo de Administracion de Sistemas y soporte Informatico.</p>
         <p>¡Me gusta crear productos frontend sólidos y escalables con excelentes experiencias de usuario.</p>       
@@ -31,7 +35,7 @@
             <img src="proyecto1.jpg" alt="Proyecto 1">
             <h3>HelloTax</h3>
             <p>hola impuesto</p>
-            <p>aplicación.hellotax.com.</p>  
+            <p>aplicación.hellotax.com</p>  
         </div>
         <div class="proyecto">
             <img src="proyecto2.jpg" alt="Proyecto 2">
